# rust-messenger

./: .gitignore  Cargo.toml  README.md  state-log.md
docs/testing/: commands.md
src/: main.rs
src/candidates/: api.rs  manager.rs  mod.rs  publication.rs
src/chat/: conversation.rs  manager.rs  mod.rs  models.rs  simulator.rs  storage.rs
src/commands/: block.rs  candidate_pairs.rs  capabilities.rs  connect.rs  contacts.rs  conversation.rs  dev.rs  disconnect.rs  discover.rs  fetch_candidates.rs  ice_check.rs  inbox.rs  init.rs  listen.rs  lock.rs  lookup.rs  message.rs  mod.rs  negotiate.rs  netinfo.rs  offline.rs  online.rs  peers.rs  ping.rs  publish_candidates.rs  punch.rs  punch_status.rs  recover.rs  refresh_candidates.rs  register.rs  remove.rs  rename.rs  requests.rs  restore.rs  search.rs  secure_session.rs  send.rs  status.rs  test_udp.rs  unlock.rs  (+3 more)
src/config/: profile.rs
src/connection/: manager.rs  mod.rs  models.rs  peer.rs  state.rs
src/contacts/: manager.rs  models.rs
src/crypto/: fingerprint.rs  keys.rs  mod.rs
src/handshake/: answer.rs  manager.rs  mod.rs  negotiation.rs  offer.rs  selector.rs
src/ice/: checks.rs  connectivity.rs  keepalive.rs  mod.rs  pair.rs  state.rs
src/messaging/: delivery.rs  listener.rs  manager.rs  mod.rs  receipts.rs  receiver.rs  sender.rs  state.rs
src/network/: candidate.rs  channel.rs  discovery.rs  interfaces.rs  mod.rs  nat.rs  reliability.rs  session_keys.rs  stun.rs  udp.rs
src/peer/: candidate_exchange.rs  capabilities.rs  discovery.rs  mod.rs
src/presence/: api.rs  manager.rs  mod.rs  (+1 more)
(+31 files in other folders)
